--- a/Onboarding/templates/services.html
+++ b/Onboarding/templates/services.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="{% static 'css/about.css' %}?v=7">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&display=swap" rel="stylesheet">
     <style>
         .hidden {
           display: none;
@@ -20,8 +23,17 @@
       transition: height 0.3s ease;
       overflow: hidden;
     }
+
+    .playwrite-cu-uniquifier {
+  font-family: "Playwrite CU", cursive;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
+}
+
       </style>
 </head>
+
 <body class="bg-white">
     
 <!-- NavBar -->
@@ -42,6 +54,8 @@
                       <a href="{% url 'Onboarding:about' %}" class="rounded-md px-3 py-2 text-sm uppercase font-medium">About US</a>
                       <a href="{% url 'Onboarding:services' %}" class=" px-3 py-2 text-sm uppercase font-medium active ">Our services</a>
                       <a href="{% url 'Onboarding:contacts' %}" class=" px-3 py-2 text-sm uppercase font-medium">Contact us</a>
+                      <a target="_blank" class="px-3 py-2 text-sm uppercase font-medium" href="https://forms.gle/SYngRR6FtZ67UbB78">Career</a>
+                      <a target="_blank" class="px-3 py-2 text-sm uppercase font-medium" href="https://forms.gle/5WsGnkkdFrFPkRaF6">Referral</a>
                     </div>
                   </div>
                 </div>
@@ -66,6 +80,8 @@
                 <a href="{% url 'Onboarding:about' %}" class=" block rounded-md px-3 py-2 text-base font-medium">About Us</a>
                 <a href="{% url 'Onboarding:services' %}" class=" active block rounded-md px-3 py-2 text-base font-medium">Our Services</a>
                 <a href="{% url 'Onboarding:contacts' %}" class=" block rounded-md px-3 py-2 text-base font-medium">Contact Us</a>
+                <a target="_blank" class=" block rounded-md px-3 py-2 text-base font-medium" href="https://forms.gle/SYngRR6FtZ67UbB78">Career</a>
+                <a target="_blank" class=" block rounded-md px-3 py-2 text-base font-medium" href="https://forms.gle/5WsGnkkdFrFPkRaF6">Referral</a>
               </div>
             </div>
           </nav>
@@ -130,7 +146,7 @@
         <div data-aos="fade-up"  data-aos-once="true" class="title-banner">
           <!-- <h1 class="lg:text-4xl font-bold md:text-3xl text-3xl text-center text-blue-500 capitalize">What We <span class="text-blue-500">do here</span></h1> -->
           <div class="mx-auto max-w-2xl lg:text-center lg:pl-[0px] pl-5 lg:pr-[0px] pr-2 md:mb-8 " >
-            <h2 class="text-base  font-semibold leading-7 uppercase text-green-500">Our Services</h2>
+          
             <p class="mt-2 text-3xl font-bold tracking-tight uppercase text-blue-500 sm:text-4xl">what we do here</p>
             <p class="mt-6 text-lg leading-8 text-gray-600">Here at Meaningful Minds Therapeutic Services, LLC, we realize that no two 
               people are the same, and we tailor our services to meet specific needs for 
@@ -142,8 +158,8 @@
           </div>
          </div>
             <div class="features-items pt-5 container mx-auto">
-              <div data-aos="fade-up"  data-aos-once="true" class="feature-item  md:pt-0  px-10 md:px-16 lg:px-28 flex bg-green-700 md:flex-row flex-col justify-center items-center py-10 align-middle">
-                <div class="feature-item-text md:text-left sm:mr-[10px]  text-center md:w-[750px]">
+              <div data-aos="fade-up"  data-aos-once="true" class="feature-item  md:pt-0  px-10 md:px-16 lg:px-28 flex text-left bg-green-700 md:flex-row flex-col justify-center items-center py-10 align-middle">
+                <div class="feature-item-text text-left sm:mr-[10px]   md:w-[750px]">
                   <h1 class=" text-green-500 mb-1 font-bold lg:text-3xl md:text-2xl text-2xl">
                     Partial Hospitalization Program (PHP)-Level II</h1>
                   <p class="text-white   text-[15px] md:text-[15px] lg:text-[18px] ">
@@ -157,11 +173,11 @@
                   </p>
                 </div>
                 <div class="feature-item-img mt-8">
-                    <img class="w-[500px] mt-8 rounded-[20px]" src="{% static 'images/18593.jpg' %}" alt="">
+                    <img class="w-[500px] mt-8 rounded-[20px]" src="{% static 'images/IMG-20240903-WA0039.jpg' %}" alt="">
                 </div>
               </div>
               <div data-aos="fade-up"  data-aos-once="true" class="feature-item  md:pt-0  px-10 md:px-16 lg:px-28 flex md:flex-row-reverse flex-col justify-center items-center align-middle mt-12">
-                <div class="feature-item-text md:text-left text-center sm:ml-[20px]  md:w-[750px]">
+                <div class="feature-item-text text-left  sm:ml-[20px]  md:w-[750px]">
                   <h1 class=" text-green-500 mb-1  font-bold lg:text-3xl md:text-2xl text-2xl">
                     Intensive Outpatient (IOP)-Level 2.1</h1>
                   <p class="text-gray-500 pb-5 text-[15px]  md:text-[15px] lg:text-[18px] ">
@@ -173,11 +189,11 @@ typically run approximately 3-6 hours each day for one to three days a week.
                   </p>
                 </div>
                 <div class="feature-item-img">
-                    <img class="w-[500px] rounded-[20px]" src="{% static 'images/18366.jpg' %}" alt="">
+                    <img class="w-[500px] rounded-[20px]" src="{% static 'images/IMG-20240903-WA0040.jpg'%}" alt="">
                 </div>
               </div>
               <div data-aos="fade-up"  data-aos-once="true" class="feature-item    px-10 md:px-16 lg:px-28 flex md:flex-row flex-col justify-center items-center align-middle mt-8 py-[72px] bg-green-700">
-                <div class="feature-item-text md:text-left sm:mr-[10px]  text-center md:w-[750px]">
+                <div class="feature-item-text text-left sm:mr-[10px]   md:w-[750px]">
                   <h1 class="pb-1 text-green-500 font-bold lg:text-3xl md:text-2xl text-2xl">
                     Outpatient Program (OP)-Level I
                   
@@ -191,15 +207,26 @@ typically run approximately 3-6 hours each day for one to three days a week.
                     stressors, family relations, interpersonal relations, mental health issues, life span
                     issues, psychiatric illnesses, addictions, and other traumas. OP’s typically run 3-4 hours
                     a day, one to three days a week.
-                   
+                   <br>
+                   <b>All programs include:</b>
+<div class="text-white">
+  
+ <li>Substance Use assessment, evaluation, and consultation</li>
+ <li> Group and individual counseling</li>
+  <li>Medication monitoring and education</li>
+ <li> Drug Testing and Reporting</li>
+ <li> Discharge planning</li>
+  <li>Light snacks and lunch</li>
+ <li>Transportation to and from the program</li>
+</div>
                   </p>
                 </div>
                 <div class="feature-item-img">
-                    <img class="w-[500px] mt-8 rounded-[20px]" src="{% static 'images/18506.jpg' %}" alt="">
+                    <img class="w-[500px] mt-8 rounded-[20px]" src="{% static 'images/IMG-20240903-WA0041.jpg' %}" alt="">
                 </div>
               </div>
               <div data-aos="fade-up"  data-aos-once="true" class="feature-item  md:pt-0  px-10 md:px-16 lg:px-28 flex md:flex-row-reverse flex-col justify-center items-center align-middle mt-12 pb-10">
-                <div class="feature-item-text md:text-left text-center sm:ml-[20px]  md:w-[750px]">
+                <div class="feature-item-text text-left  sm:ml-[20px]  md:w-[750px]">
                   <h1 class=" text-green-500 mb-1  font-bold lg:text-3xl md:text-2xl text-2xl">
                     
                     Psychiatric Rehabilitation Program-Adults</h1>
@@ -211,13 +238,118 @@ typically run approximately 3-6 hours each day for one to three days a week.
                     Psychiatric rehabilitation programs typically involve a range of services, including, social
                     support, vocational training, resource linkage, skill building, and educational programs.
                     The focus is on helping individuals to build a support system, develop coping strategies,
-                    and learn new skills that will enable them to function more effectively in their daily lives.</p>
+                    and learn new skills that will enable them to function more effectively in their daily lives.
+                    <br>
+                    <b>Individual &amp; Group Rehabilitation Activities are designed to reduce functional behavioral
+                      impairments and develop and/or restore skills in a variety of areas, including:</b>
+                   <div class="text-gray-500">
+                    <li>Self-Care Skills</li>
+                    <li>Independent Living Skills</li>
+                    <li> Social/Interactive Skills</li>
+                    <li>Anger Management Skills</li>
+                    <li>Employment goals</li>
+                    <li> Symptom Management</li>
+                    <li>Accessing Community Resources</li>
+                    <li>Personal Safety</li>
+                    <li>Maintaining Boundaries</li>
+                    <br>
+                    <b>Time Management
+                      To meet Eligibility Requirements A Child Must Be:</b>
+                    <li>18 or older</li>
+                    <li>Actively participating in mental health treatment</li>
+                    <li>Referred by a Licensed Mental Health Professional</li>
+                    <li>Diagnosed with a qualified behavioral health diagnosis</li>
+                    <li>Willing to participate in Psychiatric Rehabilitation Program services</li>
+                    <li>A Medical Assistance recipient</li>
+                   </div>
+                  
+                  </p>
                 </div>
                 <div class="feature-item-img">
-                    <img class="w-[500px] rounded-[20px]" src="{% static 'images/18557.jpg' %}" alt="">
+                    <img class="w-[500px] rounded-[20px]" src="{% static 'images/IMG-20240903-WA0046.jpg' %}" alt="">
                 </div>
               </div>
-          
+              <div data-aos="fade-up"  data-aos-once="true" class="feature-item    px-10 md:px-16 lg:px-28 flex md:flex-row flex-col justify-center items-center align-middle mt-8 py-[72px] bg-green-700">
+                <div class="feature-item-text text-left sm:mr-[10px]   md:w-[750px]">
+                  <h1 class="pb-1 text-green-500 font-bold lg:text-3xl md:text-2xl text-2xl">
+                    Psychiatric Rehabilitation Program-Minors
+                  
+                  </h1>
+                  <p class="text-white   text-[15px] md:text-[15px] lg:text-[18px] ">
+                    Psychiatric Rehabilitation Program for Children and Adolescents are designed to
+complement, support and strengthen the mental health (Therapy and Psychiatry)
+services the child is already receiving. Trained rehabilitation staff provide a combination
+of individual and group rehabilitation activities at the child’s home and/or other
+appropriate community locations.
+On Site (facility-based) and Off Site (community-based) services are family focused,
+individualized and based on the child’s and the family’s strengths and resilience.
+Specific rehabilitation goals are established, which target identified needs based on
+information from the referring mental health professional, a comprehensive assessment
+and meetings with the child and his/her family.
+PRP staff routinely evaluate progress with each child and their parent/guardian/support
+team and provide monthly summary reports to the primary therapist and other mental
+health professionals working with the child.
+<br>
+<b>Individual &amp; Group Rehabilitation Activities are designed to reduce functional behavioral
+  impairments and develop and/or restore age-appropriate skills in a variety of areas,
+  including:</b>
+              
+<div class="text-white">
+  
+ <li>Self Care Skills</li>
+ <li> Semi-Independent Living Skills</li>
+  <li>Social/Interactive Skills</li>
+ <li>Anger Management Skills</li>
+ <li>Symptom Management</li>
+  <li>Accessing Community Resources</li>
+ <li>Personal Safety</li>
+ <li>Maintaining Age-Appropriate Boundaries</li>
+ <li>Time Management</li>
+ <br>
+ <b>To meet Eligibility Requirements A Child Must Be:</b>
+
+<li>5 – 17 years old</li>
+<li>Actively participating in mental health treatment</li>
+<li>Referred by a Licensed Mental Health Professional</li>
+<li>Diagnosed with a behavioral health diagnosis</li>
+<li>Willing to participate in Psychiatric Rehabilitation Program services</li>
+<li>A Medical Assistance recipient</li>
+</div>
+                  </p>
+                </div>
+                <div class="feature-item-img">
+                    <img class="w-[500px] mt-8 rounded-[20px]" src="{% static 'images/IMG-20240903-WA0045.jpg' %}" alt="">
+                </div>
+              </div>
+              <div data-aos="fade-up"  data-aos-once="true" class="feature-item  md:pt-0  px-10 md:px-16 lg:px-28 flex md:flex-row-reverse flex-col justify-center items-center align-middle mt-12 pb-10">
+                <div class="feature-item-text text-left  sm:ml-[20px]  md:w-[750px]">
+                  <h1 class=" text-green-500 mb-1  font-bold lg:text-3xl md:text-2xl text-2xl">
+                    Medication Management</h1>
+                  <p class="text-gray-500 pb-5 text-[15px]  md:text-[15px] lg:text-[18px]">
+                    For many clients with mental health or co-occurring disorders, medication management
+may be a necessary tool for continuity of care.
+<br>
+<b>Clients in this program work with a licensed medical professional that can help:</b>
+                  
+                   <div class="text-gray-500">
+                    <li>Initiate medications for new clients</li>
+                    <li>Provide continuation of ongoing medications</li>
+                    <li> Ensure clients are following their medication regimen</li>
+                    <li>Monitor dosage and efficacy of medications</li>
+                    <li>Develop an individualized plan of care in conjunction with clients and other
+                      behavioral health professionals</li>
+                    <br>
+                    Importantly, our medication management services help individuals improve their quality
+of life. To learn more about medication management or other treatment programs,
+please Meaningful Minds Therapeutic Services today.
+                   </div>
+                  
+                  </p>
+                </div>
+                <div class="feature-item-img">
+                    <img class="w-[500px] rounded-[20px]" src="{% static 'images/IMG-20240903-WA0044.jpg' %}" alt="">
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -241,7 +373,11 @@ typically run approximately 3-6 hours each day for one to three days a week.
   }
   ```
 -->
-
+<!-- 
+X - https://x.com/meaningful45835
+instagram - https://www.instagram.com/meaningfulmindsllc/
+Facebook - https://web.facebook.com/profile.php?id=100089789233240
+ -->
       
  
 <footer class="bg-blue-950 text-gray-600 body-font" data-aos="zoom-in"  data-aos-once="true">
@@ -250,13 +386,39 @@ typically run approximately 3-6 hours each day for one to three days a week.
       <img  class="rounded-[20px] w-[250px]" src="{% static 'images/mm logo.jpg' %}">
     </a>
     <p class="text-sm text-gray-200 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4"> 606 Edmondson Ave Suite 200
+    
     </p>
-    <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-      <a href="mailto:meaningfulmindsllc@gmail.com" class="mt-2 text-sm text-gray-200">meaningfulmindsllc@gmail.com</a>
+    
+    <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center flex-col sm:justify-start">
+      <a href="mailto:meaningfulmindsllc@gmail.com" class="mt-2 mb-2 text-sm text-gray-200">meaningfulmindsllc@gmail.com</a>
+      <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
+        <a target="_blank" href="https://web.facebook.com/profile.php?id=100089789233240" class="text-gray-500 cursor-pointer">  
+          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+          </svg>
+        </a>
+        <a target="_blank" href="https://x.com/meaningful45835" class="ml-3 cursor-pointer text-gray-500">
+          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+          </svg>
+        </a>
+        <a target="_blank"  href="https://www.instagram.com/meaningfulmindsllc/" class="ml-3 cursor-pointer text-gray-500">
+          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+            <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+          </svg>
+        </a>
+      </span>
     </span>
   </div>
+  <p class="text-xs text-gray-400 p-2">
+Partnerships:
+Baltimore City District Court- Addiction Recovery Court/Truancy Court | Milestones Child Care Center | Addiction Wellness Center | Baltimore County Government-Quick Response Team (QRT) | Behavioral Health Administration-Substance Abuse Treatment Services
+(SATS)Program | University of Maryland School of Medicine-Department of Psychiatry
+  </p>
 </footer>
  
+
 
       
     </main>
