--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -126,7 +126,7 @@ main #welcome-banner:before {
 }
 
 #welcome-banner h1 {
-    font-size: 2.5rem;
+    font-size: 1rem;
     letter-spacing: .1rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
@@ -141,7 +141,7 @@ main #welcome-banner:before {
 
 @media (max-width: 768px) {
     #welcome-banner h1 {
-        font-size: 1.2rem;
+        font-size: .8rem;
     }
 }
 
