--- a/Onboarding/templates/services.html
+++ b/Onboarding/templates/services.html
@@ -386,7 +386,8 @@ Facebook - https://web.facebook.com/profile.php?id=100089789233240
       <img  class="rounded-[20px] w-[250px]" src="{% static 'images/mm logo.jpg' %}">
     </a>
     <p class="text-sm text-gray-200 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4"> 606 Edmondson Ave Suite 200
-    
+      <br>
+      <img class=" mt-2 w-[50px] " src="{% static 'images/IMG-20240903-WA0036(1).jpg' %}" alt="">
     </p>
     
     <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center flex-col sm:justify-start">
