--- a/Onboarding/templates/contacts.html
+++ b/Onboarding/templates/contacts.html
@@ -9,9 +9,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}">
     <link rel="manifest" href="{% static 'images/site.webmanifest' %}">
     <title>Contact Us | Meaningful Mind Therapeutic Services</title>
-    <link rel="stylesheet" href="{% static 'css/about.css' %}?v=7">
+    <link rel="stylesheet" href="{% static 'css/about.css' %}?v=8">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
+    
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <style>
         .hidden {
           display: none;
@@ -20,6 +24,14 @@
       transition: height 0.3s ease;
       overflow: hidden;
     }
+
+    #welcome-banner h1 , #About .about .about-1 h1 {
+  font-family: "Dancing Script", cursive;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}
+
       </style>
 </head>
 <body>
@@ -123,8 +135,8 @@
             <img src="{% static 'images/47250.jpg'%}" alt="" class="background">
             <img src="{% static 'images/woman-therapy-session-attentive-psychologist-attentive-psychologist-holding-pencil-her-hands-making-written-notes-while-listening-her-client.jpg' %}" alt="" class="background">
           </div>
-          <h1 class="font-mono font-extrabold text-left">CONTACT <span class="text-blue-400">US</span></h1>
-         <h3 class="font-bold font-mono text-white pl-[90px] uppercase">Home | Contact Us</h3>
+          <h1 class="font-mono font-extrabold text-left text-3xl sm:text-5xl">CONTACT <span class="text-blue-400">US</span></h1>
+         <h3 class="font-bold font-mono text-white pl-[90px] uppercase text-2xl sm:text-4xl">Home | Contact Us</h3>
         </section>
         <!-- End of Welcome Banner -->
 
