--- a/Onboarding/templates/services.html
+++ b/Onboarding/templates/services.html
@@ -9,12 +9,15 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}">
     <link rel="manifest" href="{% static 'images/site.webmanifest' %}">
     <title>Our Services | Meaningful Mind Therapeutic Services</title>
-    <link rel="stylesheet" href="{% static 'css/about.css' %}?v=7">
+    <link rel="stylesheet" href="{% static 'css/about.css' %}?v=8">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playwrite+CU:wght@100..400&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <style>
         .hidden {
           display: none;
@@ -30,6 +33,16 @@
   font-weight: weight;
   font-style: normal;
 }
+
+#welcome-banner h1 , #About .about .about-1 h1 {
+  font-family: "Dancing Script", cursive;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}
+
+
+
 
       </style>
 </head>
@@ -135,8 +148,8 @@
             <img src="{% static 'images/47250.jpg'%}" alt="" class="background">
             <img src="{% static 'images/woman-therapy-session-attentive-psychologist-attentive-psychologist-holding-pencil-her-hands-making-written-notes-while-listening-her-client.jpg' %}" alt="" class="background">
           </div>
-          <h1 class="font-mono font-extrabold text-left">OUR <span class="text-blue-400">SERVICES</span></h1>
-         <h3 class="font-bold font-mono text-white pl-[90px] uppercase">Home | Our Services</h3>
+          <h1 class="font-mono sm:text-5xl text-3xl font-extrabold text-left">OUR <span class="text-blue-400">SERVICES</span></h1>
+         <h3 class="font-bold font-mono text-white pl-[90px] text-2xl sm:text-4xl uppercase">Home | Our Services</h3>
         </section>
         <!-- End of Welcome Banner -->
 
@@ -266,7 +279,7 @@ typically run approximately 3-6 hours each day for one to three days a week.
                   </p>
                 </div>
                 <div class="feature-item-img">
-                    <img class="w-[500px] rounded-[20px]" src="{% static 'images/IMG-20240903-WA0046.jpg' %}" alt="">
+                    <img class="w-[500px] rounded-[20px]" src="{% static 'images/IMG-20240903-WA0045.jpg' %}" alt="">
                 </div>
               </div>
               <div data-aos="fade-up"  data-aos-once="true" class="feature-item    px-10 md:px-16 lg:px-28 flex md:flex-row flex-col justify-center items-center align-middle mt-8 py-[72px] bg-green-700">
@@ -318,7 +331,7 @@ health professionals working with the child.
                   </p>
                 </div>
                 <div class="feature-item-img">
-                    <img class="w-[500px] mt-8 rounded-[20px]" src="{% static 'images/IMG-20240903-WA0045.jpg' %}" alt="">
+                    <img class="w-[500px] mt-8 rounded-[20px]" src="{% static 'images/IMG-20240903-WA0046.jpg' %}" alt="">
                 </div>
               </div>
               <div data-aos="fade-up"  data-aos-once="true" class="feature-item  md:pt-0  px-10 md:px-16 lg:px-28 flex md:flex-row-reverse flex-col justify-center items-center align-middle mt-12 pb-10">
