--- a/Onboarding/templates/about.html
+++ b/Onboarding/templates/about.html
@@ -215,9 +215,11 @@
     <a href="{% url 'Onboarding:home' %}" class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
       <img  class="rounded-[20px] w-[250px]" src="{% static 'images/mm logo.jpg' %}">
     </a>
-    <p class="text-sm text-gray-200 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4"> 606 Edmondson Ave Suite 200
+    <p class="text-sm text-gray-200 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4 flex flex-col justify-center align-items"> 
+
+      <h1 class="text-white pr-3"> 606 Edmondson Ave Suite 200 </h1>
       <br>
-      <img class=" mt-2 w-[50px] " src="{% static 'images/IMG-20240903-WA0036(1).jpg' %}" alt="">
+      <img class=" mt-2 w-[80px] items-center align-middle justify-center " src="{% static 'images/IMG-20240903-WA0036(1).jpg' %}" alt="">
     
     </p>
     
@@ -243,10 +245,9 @@
       </span>
     </span>
   </div>
-  <p class="text-xs text-gray-400 p-2">
-Partnerships:
-Baltimore City District Court- Addiction Recovery Court/Truancy Court | Milestones Child Care Center | Addiction Wellness Center | Baltimore County Government-Quick Response Team (QRT) | Behavioral Health Administration-Substance Abuse Treatment Services
-(SATS)Program | University of Maryland School of Medicine-Department of Psychiatry
+  <p class=" text-gray-400 p-2">
+   
+    <img src="{% static 'images/IMG-20240919-WA0010.jpg' %}" alt="">
   </p>
 </footer>
  
