--- a/Onboarding/templates/index.html
+++ b/Onboarding/templates/index.html
@@ -42,7 +42,7 @@
 #welcome-banner h1 , #About .about .about-1 h1 {
   font-family: "Dancing Script", cursive;
   font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-weight: weight;
   font-style: normal;
 }
 
@@ -471,10 +471,9 @@ diagnosis conditions, which are addressed throughout treatment.
       </span>
     </span>
   </div>
-  <p class="text-xs text-gray-400 p-2">
-Partnerships:
-Baltimore City District Court- Addiction Recovery Court/Truancy Court | Milestones Child Care Center | Addiction Wellness Center | Baltimore County Government-Quick Response Team (QRT) | Behavioral Health Administration-Substance Abuse Treatment Services
-(SATS)Program | University of Maryland School of Medicine-Department of Psychiatry
+  <p class=" text-gray-400 p-2">
+   
+    <img src="{% static 'images/IMG-20240919-WA0010.jpg' %}" alt="">
   </p>
 </footer>
  
