--- a/Onboarding/templates/services.html
+++ b/Onboarding/templates/services.html
@@ -186,7 +186,7 @@
                   </p>
                 </div>
                 <div class="feature-item-img mt-8">
-                    <img class="w-[500px] mt-8 rounded-[20px]" src="{% static 'images/IMG-20240903-WA0039.jpg' %}" alt="">
+                    <img class="w-[500px] mt-8 rounded-[20px]" src="{% static 'images/IMG-20240919-WA0029.jpg' %}" alt="">
                 </div>
               </div>
               <div data-aos="fade-up"  data-aos-once="true" class="feature-item  md:pt-0  px-10 md:px-16 lg:px-28 flex md:flex-row-reverse flex-col justify-center items-center align-middle mt-12">
@@ -202,7 +202,7 @@ typically run approximately 3-6 hours each day for one to three days a week.
                   </p>
                 </div>
                 <div class="feature-item-img">
-                    <img class="w-[500px] rounded-[20px]" src="{% static 'images/IMG-20240903-WA0040.jpg'%}" alt="">
+                    <img class="w-[500px] rounded-[20px]" src="{% static 'images/IMG-20240919-WA0034.jpg'%}" alt="">
                 </div>
               </div>
               <div data-aos="fade-up"  data-aos-once="true" class="feature-item    px-10 md:px-16 lg:px-28 flex md:flex-row flex-col justify-center items-center align-middle mt-8 py-[72px] bg-green-700">
@@ -235,7 +235,7 @@ typically run approximately 3-6 hours each day for one to three days a week.
                   </p>
                 </div>
                 <div class="feature-item-img">
-                    <img class="w-[500px] mt-8 rounded-[20px]" src="{% static 'images/IMG-20240903-WA0041.jpg' %}" alt="">
+                    <img class="w-[500px] mt-8 rounded-[20px]" src="{% static 'images/IMG-20240919-WA0032.jpg' %}" alt="">
                 </div>
               </div>
               <div data-aos="fade-up"  data-aos-once="true" class="feature-item  md:pt-0  px-10 md:px-16 lg:px-28 flex md:flex-row-reverse flex-col justify-center items-center align-middle mt-12 pb-10">
@@ -279,7 +279,7 @@ typically run approximately 3-6 hours each day for one to three days a week.
                   </p>
                 </div>
                 <div class="feature-item-img">
-                    <img class="w-[500px] rounded-[20px]" src="{% static 'images/IMG-20240903-WA0045.jpg' %}" alt="">
+                    <img class="w-[500px] rounded-[20px]" src="{% static 'images/IMG-20240919-WA0037.jpg' %}" alt="">
                 </div>
               </div>
               <div data-aos="fade-up"  data-aos-once="true" class="feature-item    px-10 md:px-16 lg:px-28 flex md:flex-row flex-col justify-center items-center align-middle mt-8 py-[72px] bg-green-700">
@@ -331,7 +331,7 @@ health professionals working with the child.
                   </p>
                 </div>
                 <div class="feature-item-img">
-                    <img class="w-[500px] mt-8 rounded-[20px]" src="{% static 'images/IMG-20240903-WA0046.jpg' %}" alt="">
+                    <img class="w-[500px] mt-8 rounded-[20px]" src="{% static 'images/IMG-20240919-WA0028.jpg' %}" alt="">
                 </div>
               </div>
               <div data-aos="fade-up"  data-aos-once="true" class="feature-item  md:pt-0  px-10 md:px-16 lg:px-28 flex md:flex-row-reverse flex-col justify-center items-center align-middle mt-12 pb-10">
@@ -393,14 +393,17 @@ Facebook - https://web.facebook.com/profile.php?id=100089789233240
  -->
       
  
-<footer class="bg-blue-950 text-gray-600 body-font" data-aos="zoom-in"  data-aos-once="true">
+ <footer class="bg-blue-950 text-gray-600 body-font" data-aos="zoom-in"  data-aos-once="true">
   <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
     <a href="{% url 'Onboarding:home' %}" class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
       <img  class="rounded-[20px] w-[250px]" src="{% static 'images/mm logo.jpg' %}">
     </a>
-    <p class="text-sm text-gray-200 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4"> 606 Edmondson Ave Suite 200
+    <p class="text-sm text-gray-200 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4 flex flex-col justify-center align-items"> 
+
+      <h1 class="text-white pr-3"> 606 Edmondson Ave Suite 200 </h1>
       <br>
-      <img class=" mt-2 w-[50px] " src="{% static 'images/IMG-20240903-WA0036(1).jpg' %}" alt="">
+      <img class=" mt-2 w-[80px] items-center align-middle justify-center " src="{% static 'images/IMG-20240903-WA0036(1).jpg' %}" alt="">
+    
     </p>
     
     <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center flex-col sm:justify-start">
@@ -425,13 +428,11 @@ Facebook - https://web.facebook.com/profile.php?id=100089789233240
       </span>
     </span>
   </div>
-  <p class="text-xs text-gray-400 p-2">
-Partnerships:
-Baltimore City District Court- Addiction Recovery Court/Truancy Court | Milestones Child Care Center | Addiction Wellness Center | Baltimore County Government-Quick Response Team (QRT) | Behavioral Health Administration-Substance Abuse Treatment Services
-(SATS)Program | University of Maryland School of Medicine-Department of Psychiatry
+  <p class=" text-gray-400 p-2">
+   
+    <img src="{% static 'images/IMG-20240919-WA0010.jpg' %}" alt="">
   </p>
 </footer>
- 
 
 
       
