--- a/Onboarding/templates/about.html
+++ b/Onboarding/templates/about.html
@@ -16,6 +16,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
     <style>
         .hidden {
           display: none;
@@ -25,10 +28,16 @@
       overflow: hidden;
     }
 
-    #welcome-banner h1 , #About .about .about-1 h1 {
+   /* {
   font-family: "Dancing Script", cursive;
   font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-weight: weight;
+  font-style: normal;
+} */
+
+#About h2 , #About h1  {
+  font-family: "Berkshire Swash", serif;
+  font-weight: 400;
   font-style: normal;
 }
 
@@ -144,8 +153,8 @@
       <section id="About" class="lg:mt-10 mt-10" >
             <div class="about mx-auto container flex lg:flex-row flex-col bg-blue-200 md:justify-center lg:justify-evenly  xl:p-20">
                 <div class="about-1 p-5" data-aos="fade-up"  data-aos-once="true">
-                    <h2 class="uppercase font-bold text-5xl text-blue-500 font-sans tracking-tight pb-5">Our Mission</h2>
-                    <P class="lg:w-[500px] w-[100%] font-sans text-gray-900 text-xl" style="letter-spacing: .1rem; word-spacing: .1rem;" >Meaningful Minds Therapeutic Services is a change agent dedicated to improving 
+                    <h2 class="font-bold text-5xl text-blue-500 font-sans tracking-tight pb-5">Our Mission</h2>
+                    <P class="lg:w-[500px] w-[100%] font-sans text-gray-900 text-xl" >Meaningful Minds Therapeutic Services is a change agent dedicated to improving 
                         the lives and social conditions for people with mental health, substance use 
                         and trauma-related challenges, by promoting health, wellness and recovery in a 
                         meaningful way.<br> <br>  </P>
@@ -157,8 +166,8 @@
           </div>
             <div class="about mx-auto container flex md:flex-row-reverse flex-col md:justify-center lg:justify-evenly  p-5 lg:p-2 ">
               <div class="about-1 p-5" data-aos="fade-up"  data-aos-once="true">
-                  <h2 class="uppercase font-bold md:text-5xl lg:text-5xl text-5xl text-blue-500 font-sans tracking-tight pb-5 mt-12">Our Story</h2>
-                  <P class="md:w-[300px] lg:w-[700px]  w-[100%] font-sans text-gray-900" style="letter-spacing: .1rem; word-spacing: .1rem;" >Meaningful Minds was born through the vision of founder Jahneen Keatz Onyemachi.
+                  <h2 class=" font-bold md:text-5xl lg:text-5xl text-5xl text-blue-500 font-sans tracking-tight pb-5 mt-12">Our Story</h2>
+                  <P class="md:w-[300px] lg:w-[700px]  w-[100%] font-sans text-gray-900" >Meaningful Minds was born through the vision of founder Jahneen Keatz Onyemachi.
                     Jahneen had a vision to provide services to the community that speaks to the heart of
                     the people, not the cookie-cutter same way of doing things. She has over 15 years of
                     experience as a help agent serving our most vulnerable population that includes but not
@@ -178,11 +187,11 @@
                     manage life’s challenges. It is never too late to start living the life you’ve always wanted.
                     Our goal is to take you from “healing to wholeness”. If you’re interested in becoming a
                     better, happier, more fulfilled you, get started by reaching out today!<br> <br></P>
-                  <h1 class="text-black text-2xs  pb-1 ">- Jahneen Keatz Onyemachi , FOUNDER / CEO</h1>
+                  <h1 class="text-black text-2xs  pb-1 ">- Jahneen Keatz Onyemachi , <span class="font-sans">FOUNDER/CEO</span>.</h1>
                   
               </div>
               <div class="about-2 p-5 mt-5" data-aos="fade-up"  data-aos-once="true">
-                  <img class="lg:w-[250px]  md:w-[300px] rounded-[50px]" src="{% static 'images/f9d82190-a037-11ed-85e3-8bd5b2b54d4f.jpg' %}" alt="">
+                  <img class="lg:w-[250px] md:mt-10  md:w-[300px] rounded-[50px]" src="{% static 'images/f9d82190-a037-11ed-85e3-8bd5b2b54d4f.jpg' %}" alt="">
           </div>
            </div>
 
@@ -208,8 +217,6 @@
   ```
 -->
 
-
- 
 <footer class="bg-blue-950 text-gray-600 body-font" data-aos="zoom-in"  data-aos-once="true">
   <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
     <a href="{% url 'Onboarding:home' %}" class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
@@ -217,14 +224,19 @@
     </a>
     <p class="text-sm text-gray-200 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4 flex flex-col justify-center align-items"> 
 
-      <h1 class="text-white pr-3"> 606 Edmondson Ave Suite 200 </h1>
+      <h1 class="text-white pr-3 text-center"> 606 Edmondson Ave Suite 200
+        <br>
+        <a href="mailto:meaningfulmindsllc@gmail.com">meaningfulmindsllc@gmail.com</a>
+        <br>
+        <a href="{% url 'Onboarding:home' %}">410-449-3988</a></h1>
+      
       <br>
-      <img class=" mt-2 w-[80px] items-center align-middle justify-center " src="{% static 'images/IMG-20240903-WA0036(1).jpg' %}" alt="">
+      <img class=" mt-2 w-[80px] rounded-lg items-center align-middle justify-center " src="{% static 'images/IMG-20240903-WA0036(1).jpg' %}" alt="">
     
     </p>
     
     <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center flex-col sm:justify-start">
-      <a href="mailto:meaningfulmindsllc@gmail.com" class="mt-2 mb-2 text-sm text-gray-200">meaningfulmindsllc@gmail.com</a>
+      <a href="mailto:meaningfulmindsllc@gmail.com" class="mt-2 mb-2 text-sm text-gray-200">meaningfulmindsllc</a>
       <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
         <a target="_blank" href="https://web.facebook.com/profile.php?id=100089789233240" class="text-gray-500 cursor-pointer">  
           <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -247,11 +259,9 @@
   </div>
   <p class=" text-gray-400 p-2">
    
-    <img src="{% static 'images/IMG-20240919-WA0010.jpg' %}" alt="">
+    <img src="{% static 'images/mmm partners logos.jpg' %}" alt="">
   </p>
 </footer>
- 
-
       
     </main>
 
