--- a/Onboarding/templates/index.html
+++ b/Onboarding/templates/index.html
@@ -17,6 +17,11 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">
+
+<!-- Increase welcome text -->
 
     <style>
         .hidden {
@@ -37,14 +42,21 @@
   max-height: 1000px; /* Adjust according to the content */
   transition: max-height 0.5s ease-in;
 }
+/* 
 
-
-#welcome-banner h1 , #About .about .about-1 h1 {
+ {
   font-family: "Dancing Script", cursive;
   font-optical-sizing: auto;
   font-weight: weight;
   font-style: normal;
 }
+ */
+.berkshire-swash-regular , #welcome-banner h1 , #About .about .about-1 h1 {
+  font-family: "Berkshire Swash", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 
       </style>
 </head>
@@ -132,6 +144,7 @@
         <div class="mail">
           <a class= "mail-info" href=""><img src="{% static 'images/icons8-email-48.png' %}" style="padding-bottom: 17px;" alt=""> 
           </a> 
+         
           <h3>EMAIL ADDRESS<br><a href="mailto:meaningfulmindsllc@gmail.com">meaningfulmindsllc@gmail.com</a></h3>
           <a class= "Call-info" href=""><img src="{% static 'images/icons8-phone-48.png' %}" style="padding-bottom: 7px;" alt=""></a>
           <h3>TELEPHONE<br><a href="{% url 'Onboarding:home' %}">410-449-3988
@@ -157,10 +170,10 @@
 
         <!-- About Section -->
         <section id="About">
-            <div class="about mx-auto container flex lg:flex-row flex-col md:justify-center lg:justify-evenly  p-5 lg:p-2 xl:p-20">
-                <div class="about-1 p-5" data-aos="fade-up"  data-aos-once="true">
-                    <h1  class="text-blue-500 text-2xl  pb-3 font-bold ">Welcome!</h1>
-                    <P class="text-gray-950 text-left  text-xl sm:text-2xl lg:text-2xl xl:text-3xl font-sans w-[100%] xl:w-[550px] lg:w-[450px] font-bold uppercase" style="letter-spacing: .1rem; word-spacing: .1rem;" >Even the strongest people need a little bit of help to work through some of 
+            <div class="about mx-auto container flex  flex-col md:justify-center lg:justify-evenly  p-5 lg:p-2 xl:p-20">
+                <div class="about-1 p-5 tetx-center justify-center align-middle items-center flex flex-col" data-aos="fade-up"  data-aos-once="true">
+                    <h1  class="text-blue-500 text-5xl text-center  pb-3 font-bold ">Welcome!</h1>
+                    <P class="text-gray-950   text-xl sm:text-2xl lg:text-2xl xl:text-3xl font-sans w-[100%] font-bold uppercase text-center" style="letter-spacing: .1rem; word-spacing: .1rem;" >Even the strongest people need a little bit of help to work through some of 
                         life’s most challenging problems. Everyone has hurdles to overcome, and we’d 
                         love to help you along the way.
                         </P>
@@ -177,16 +190,7 @@
                         way.
                     </p> 
                     
-                        <div class="buttons mt-5  justify-evenly lg:justify-evenly flex md:flex-row flex-col">
-                            <div class="button-1 p-5 items-center mr-3  flex mb-5 lg:mb-0 " style="border: 2px solid rgb(240, 236, 236); border-radius: 2px;">
-                                <img src="{% static 'images/icons8-compassion-50 (2).png' %}" alt="">
-                                <h1 class="pl-5 lg:pl-2  w-full uppercase font-bold">Always put desire above fear</h1>
-                            </div>
-                            <div class="button-2 flex  p-5 items-center" style="border: 2px solid rgb(240, 236, 236); border-radius: 2px;">
-                                <img src="{% static 'images/icons8-speech-bubble-50.png' %}" alt="">
-                                <h1 class="pl-5 lg:pl-2 w-full uppercase font-bold">Compassionate & Professional</h1>
-                            </div>
-                        </div>
+                      
                 </div>
             </div>
         </section>
@@ -210,7 +214,16 @@
       If you’re interested in becoming a better, happier, more fulfilled you,
       get started by reaching out today!
                 </p>
-                <a href="{% url 'Onboarding:contacts' %}"><button class="bg-blue-500 p-4 mt-8 w-[200px] text-white text-2xs font-sans uppercase font-bold  cursor-pointer hover:bg-green-600">contact Us</button></a>
+                <div class="buttons mt-5  justify-evenly lg:justify-evenly flex md:flex-row flex-col">
+                  <div class="button-1 p-5 items-center mr-3  flex mb-5 lg:mb-0 " style="border: 2px solid rgb(240, 236, 236); border-radius: 2px;">
+                      <img src="{% static 'images/icons8-compassion-50 (2).png' %}" alt="">
+                      <h1 class="pl-5 lg:pl-2  w-full uppercase font-bold">Always put desire above fear</h1>
+                  </div>
+                  <div class="button-2 flex  p-5 items-center" style="border: 2px solid rgb(240, 236, 236); border-radius: 2px;">
+                      <img src="{% static 'images/icons8-speech-bubble-50.png' %}" alt="">
+                      <h1 class="pl-5 lg:pl-2 w-full uppercase font-bold">Compassionate & Professional</h1>
+                  </div>
+              </div>
             </div>
         </div>
 
@@ -443,14 +456,19 @@ diagnosis conditions, which are addressed throughout treatment.
     </a>
     <p class="text-sm text-gray-200 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4 flex flex-col justify-center align-items"> 
 
-      <h1 class="text-white pr-3"> 606 Edmondson Ave Suite 200 </h1>
+      <h1 class="text-white pr-3 text-center"> 606 Edmondson Ave Suite 200
+        <br>
+        <a href="mailto:meaningfulmindsllc@gmail.com">meaningfulmindsllc@gmail.com</a>
+        <br>
+        <a href="{% url 'Onboarding:home' %}">410-449-3988</a></h1>
+      
       <br>
-      <img class=" mt-2 w-[80px] items-center align-middle justify-center " src="{% static 'images/IMG-20240903-WA0036(1).jpg' %}" alt="">
+      <img class=" mt-2 w-[80px] rounded-lg items-center align-middle justify-center " src="{% static 'images/IMG-20240903-WA0036(1).jpg' %}" alt="">
     
     </p>
     
     <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center flex-col sm:justify-start">
-      <a href="mailto:meaningfulmindsllc@gmail.com" class="mt-2 mb-2 text-sm text-gray-200">meaningfulmindsllc@gmail.com</a>
+      <a href="mailto:meaningfulmindsllc@gmail.com" class="mt-2 mb-2 text-sm text-gray-200">meaningfulmindsllc</a>
       <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
         <a target="_blank" href="https://web.facebook.com/profile.php?id=100089789233240" class="text-gray-500 cursor-pointer">  
           <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -473,7 +491,7 @@ diagnosis conditions, which are addressed throughout treatment.
   </div>
   <p class=" text-gray-400 p-2">
    
-    <img src="{% static 'images/IMG-20240919-WA0010.jpg' %}" alt="">
+    <img src="{% static 'images/mmm partners logos.jpg' %}" alt="">
   </p>
 </footer>
  
